gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23406.d
version https://git-lfs.github.com/spec/v1
oid sha256:0c2d235319ce055d6c22593dffb199d5a187f1614fe6e640780fc83236659c7f
size 558
